tooling/nargo_cli/tests/snapshots/execution_success/double_neg_cond_bool_input/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
unconstrained fn main(a: bool) -> pub Field {
    if !a > !a {
        --(a as Field)
    } else {
        --(a as Field)
    }
}
