tooling/nargo_cli/tests/snapshots/execution_success/double_neg_cond_bool_input/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u1):
    (no terminator instruction)
}
[double_neg_cond_bool_input] Circuit output: 0x01
